# Valorant-ToolBox

./: CLAUDE.md  Cargo.toml  README.md  StretchyVal.py  app.manifest  build.rs
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-05-29-full-hd-clone-design.md
src/: admin.rs  app.rs  blood.rs  config.rs  constants.rs  dialog.rs  display.rs  fps.rs  graphics.rs  gui.rs  ini.rs  installer.rs  lang.rs  launcher.rs  logger.rs  main.rs  monitors.rs  nvidia.rs  paths.rs  process.rs  riot.rs  shortcut.rs  startup.rs  vibrance.rs  worker.rs
src/application/: installer.rs  launcher.rs  mod.rs  startup.rs  worker.rs
src/domain/: config.rs  constants.rs
src/infrastructure/: blood.rs  graphics.rs  ini.rs  mod.rs  monitors.rs  optimize.rs  paths.rs  riot.rs  vibrance.rs
src/presentation/: app.rs  mod.rs  shortcut.rs
