[package]
name = "valorant-toolbox"
version = "2.0.0"
edition = "2021"
description = "Valorant stretched-resolution launcher and INI patcher"
authors = ["octopuslowtech"]

[[bin]]
name = "Valorant-ToolBox"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
winreg = "0.52"
image = { version = "0.25", default-features = false, features = ["ico"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tray-icon = "0.19"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]

[build-dependencies]
winresource = "0.1"
